--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,39 @@
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
+
+       <com.facebook.shimmer.ShimmerFrameLayout
+           app:gone="@{!viewModel.isLoading()}"
+           app:layout_constraintTop_toBottomOf="@id/search"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:padding="10dp">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+               <include layout="@layout/item_placeholder_layout"/>
+           </LinearLayout>
+       </com.facebook.shimmer.ShimmerFrameLayout>
+       <TextView
+           app:gone="@{!viewModel.isEmpty()}"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           app:layout_constraintRight_toRightOf="parent"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="@string/usrnotfound"/>
        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            android:id="@+id/search"
@@ -22,16 +55,19 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+           android:tooltipText="@string/search"
            android:hint="@string/search">
 
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
+               android:maxLines="1"
                />
 
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.recyclerview.widget.RecyclerView
+           app:gone="@{viewModel.isLoading()}"
            app:adapter="@{adapter}"
            app:adapterItemList="@{viewModel.searchListLiveData}"
            android:padding="10dp"
@@ -40,6 +76,7 @@
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_user"/>
+
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
