--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,162 +5,188 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="user"
-            type="com.dakusuno.dakusunogua.model.User" />
+            name="viewModel"
+            type="com.dakusuno.dakusunogua.view.ui.user.UserViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/top_container"
-            app:layout_constraintTop_toTopOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            app:gone="@{viewModel.isLoading()}"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="#ffff"
-            >
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/card_user_avatar"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="2dp">
-                    <ImageView
-                        android:id="@+id/user_avatar"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        tools:src="@drawable/dummyimage"/>
-                </com.google.android.material.card.MaterialCardView>
-                <TextView
-                    android:id="@+id/user_name"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    tools:text="Sasisuseso"
-                    android:text="@{user.name}"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
-                <TextView
-                    android:id="@+id/user_username"
-                    app:layout_constraintTop_toBottomOf="@id/user_name"
-                    app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:textSize="20sp"
-                    android:text="@{user.login}"
-                    tools:text="kakiku"/>
-                <TextView
-                    android:id="@+id/user_followers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toRightOf="@id/card_user_avatar"
-                    android:layout_marginTop="5dp"
-                    android:paddingLeft="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_username"
-                    android:text="@{`` +user.followers}"
-                    tools:text="10"
-                    />
-                <TextView
-                    android:id="@+id/text_user_followers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toRightOf="@id/user_followers"
-                    android:layout_marginTop="5dp"
-                    android:paddingLeft="5dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_username"
-                    android:text="@string/followers"/>
-                <TextView
-                    android:id="@+id/user_following"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toRightOf="@id/text_user_followers"
-                    android:layout_marginTop="5dp"
-                    android:paddingLeft="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_username"
-                    android:text="@{`` +user.following}"
-                    tools:text="10"/>
-                <TextView
-                    android:id="@+id/text_user_following"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toRightOf="@id/user_following"
-                    android:layout_marginTop="5dp"
-                    android:paddingLeft="5dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_username"
-                    android:text="@string/following"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_marginTop="5dp"
-            android:id="@+id/card_user_repository"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/top_container">
-            <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_height="match_parent">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/top_container"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#ffff"
+                >
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:padding="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/card_user_avatar"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="2dp">
+                        <com.google.android.material.imageview.ShapeableImageView
+                            app:loadImage="@{`` +viewModel.user.avatar_url}"
+                            android:id="@+id/user_avatar"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            tools:src="@drawable/dummyimage"/>
+                    </com.google.android.material.card.MaterialCardView>
+                    <TextView
+                        android:id="@+id/user_name"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        tools:text="Sasisuseso"
+                        android:text="@{viewModel.user.name}"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+                    <TextView
+                        android:id="@+id/user_username"
+                        app:layout_constraintTop_toBottomOf="@id/user_name"
+                        app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:textSize="20sp"
+                        android:text="@{viewModel.user.login}"
+                        tools:text="kakiku"/>
+                    <TextView
+                        android:id="@+id/user_followers"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toRightOf="@id/card_user_avatar"
+                        android:layout_marginTop="5dp"
+                        android:paddingLeft="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_username"
+                        android:text="@{`` +viewModel.user.followers}"
+                        tools:text="10"
+                        />
+                    <TextView
+                        android:id="@+id/text_user_followers"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toRightOf="@id/user_followers"
+                        android:layout_marginTop="5dp"
+                        android:paddingLeft="5dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_username"
+                        android:text="@string/followers"/>
+                    <TextView
+                        android:id="@+id/user_following"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toRightOf="@id/text_user_followers"
+                        android:layout_marginTop="5dp"
+                        android:paddingLeft="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_username"
+                        android:text="@{`` +viewModel.user.following}"
+                        tools:text="10"/>
+                    <TextView
+                        android:id="@+id/text_user_following"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toRightOf="@id/user_following"
+                        android:layout_marginTop="5dp"
+                        android:paddingLeft="5dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_username"
+                        android:text="@string/following"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_marginTop="5dp"
+                android:id="@+id/card_user_repository"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/top_container">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/text_user_company"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/company"/>
-                <TextView
-                    android:id="@+id/user_company"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{user.company}"
-                    tools:text="google"/>
-                <TextView
-                    android:id="@+id/text_user_location"
-                    app:layout_constraintTop_toBottomOf="@id/text_user_company"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/location"/>
-                <TextView
-                    android:id="@+id/user_location"
-                    app:layout_constraintTop_toBottomOf="@id/user_company"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{user.location}"
-                    tools:text="bukan di bai"/>
-                <TextView
-                    android:id="@+id/text_user_repository"
-                    app:layout_constraintTop_toBottomOf="@id/text_user_location"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/repositories"/>
-                <TextView
-                    android:id="@+id/user_repository"
-                    app:layout_constraintTop_toBottomOf="@id/user_location"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{`` +user.public_repos}"
-                    tools:text="10"/>
+                    <TextView
+                        android:id="@+id/text_user_company"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/company"/>
+                    <TextView
+                        android:id="@+id/user_company"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.user.company}"
+                        tools:text="google"/>
+                    <TextView
+                        android:id="@+id/text_user_location"
+                        app:layout_constraintTop_toBottomOf="@id/text_user_company"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/location"/>
+                    <TextView
+                        android:id="@+id/user_location"
+                        app:layout_constraintTop_toBottomOf="@id/user_company"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.user.location}"
+                        tools:text="bukan di bai"/>
+                    <TextView
+                        android:id="@+id/text_user_repository"
+                        app:layout_constraintTop_toBottomOf="@id/text_user_location"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/repositories"/>
+                    <TextView
+                        android:id="@+id/user_repository"
+                        app:layout_constraintTop_toBottomOf="@id/user_location"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{`` +viewModel.user.public_repos}"
+                        tools:text="10"/>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.tabs.TabLayout
+                app:layout_constraintTop_toBottomOf="@id/card_user_repository"
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <androidx.viewpager2.widget.ViewPager2
+                app:layout_constraintTop_toBottomOf="@id/tab_layout"
+                android:id="@+id/pager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.facebook.shimmer.ShimmerFrameLayout
+            app:gone="@{!viewModel.isLoading()}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include layout="@layout/user_placeholder_layout"/>
+        </com.facebook.shimmer.ShimmerFrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
