--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -48,7 +48,7 @@
                         app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="10dp"
+                        android:paddingStart="10dp"
                         tools:text="Sasisuseso"
                         android:text="@{viewModel.user.name}"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
@@ -58,7 +58,7 @@
                         app:layout_constraintLeft_toRightOf="@+id/card_user_avatar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="10dp"
+                        android:paddingStart="10dp"
                         android:textSize="20sp"
                         android:text="@{viewModel.user.login}"
                         tools:text="kakiku"/>
@@ -68,7 +68,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintLeft_toRightOf="@id/card_user_avatar"
                         android:layout_marginTop="5dp"
-                        android:paddingLeft="10dp"
+                        android:paddingStart="10dp"
                         app:layout_constraintTop_toBottomOf="@id/user_username"
                         android:text="@{`` +viewModel.user.followers}"
                         tools:text="10"
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintLeft_toRightOf="@id/user_followers"
                         android:layout_marginTop="5dp"
-                        android:paddingLeft="5dp"
+                        android:paddingStart="5dp"
                         app:layout_constraintTop_toBottomOf="@id/user_username"
                         android:text="@string/followers"/>
                     <TextView
@@ -88,7 +88,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintLeft_toRightOf="@id/text_user_followers"
                         android:layout_marginTop="5dp"
-                        android:paddingLeft="10dp"
+                        android:paddingStart="10dp"
                         app:layout_constraintTop_toBottomOf="@id/user_username"
                         android:text="@{`` +viewModel.user.following}"
                         tools:text="10"/>
@@ -98,9 +98,29 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintLeft_toRightOf="@id/user_following"
                         android:layout_marginTop="5dp"
-                        android:paddingLeft="5dp"
+                        android:paddingStart="5dp"
                         app:layout_constraintTop_toBottomOf="@id/user_username"
                         android:text="@string/following"/>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        app:gone="@{!viewModel.isFavourite()}"
+                        android:clickable="true"
+                        android:onClick="@{() -> viewModel.notFavUser()}"
+                        android:layout_margin="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_followers"
+                        app:layout_constraintLeft_toRightOf="@id/card_user_avatar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_sentiment_very_satisfied_24"/>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        app:gone="@{viewModel.isFavourite()}"
+                        android:onClick="@{() -> viewModel.favUser()}"
+                        android:clickable="true"
+                        android:layout_margin="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_followers"
+                        app:layout_constraintLeft_toRightOf="@id/card_user_avatar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_sentiment_very_satisfied_24_black"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.card.MaterialCardView
@@ -164,8 +184,6 @@
                         android:layout_height="wrap_content"
                         android:text="@{`` +viewModel.user.public_repos}"
                         tools:text="10"/>
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.tabs.TabLayout
@@ -182,6 +200,7 @@
                 android:layout_weight="1" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <com.facebook.shimmer.ShimmerFrameLayout
+
             app:gone="@{!viewModel.isLoading()}"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
