--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item
+        android:icon="@drawable/ic_baseline_sentiment_very_satisfied_24_black"
+        app:showAsAction="always"
+        android:id="@+id/action_favourite"
+        android:title="@string/favourite" />
     <item
         android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="always"
         android:id="@+id/action_change_settings"
-        android:title="Setting" />
+        android:title="@string/setting" />
 </menu>
