--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,6 @@
     <color name="colorAccent">#000</color>
     <color name="background">#dddddd</color>
     <color name="danger">#E91E63</color>
-    <color name="accept">#4CAF50</color>
-    <color name="acceptmode">#64FFDA</color>
+    <color name="colorWhite">#fff</color>
 
 </resources>
